delete api backend created

--- a/frontend/add_post.html
+++ b/frontend/add_post.html
@@ -19,13 +19,14 @@
     <div id="form-container">
 
         <span>Enter Author Name</span>
-        <input type="text" placeholder="Author Name Here">
+        <input type="text" placeholder="Author Name Here" id="name-field">
         <br>
         <span>Enter Post Content</span>
-        <input type="text" placeholder="Post Content Here">
+        <input type="text" placeholder="Post Content Here" id="content-field">
         <br>
-        <button>Create Post</button>
+        <button onclick="addPost()">Create Post</button>
     </div>
 </body>
+<script src="./add-posts.js"></script>
 
 </html>
